依赖：更新 requirements.txt 添加硬件监控依赖
新增依赖库：

必需依赖：
- wmi>=1.5.1 (Windows) - 用于获取主板、蓝牙、USB、输入设备信息

可选依赖（用于更详细的硬件信息）：
- nvidia-ml-py3>=7.352.0 (Windows) - NVIDIA GPU 详细信息
  * GPU 温度、风扇、功耗、显存使用率
  * 驱动版本信息

- GPUtil>=1.4.0 (Windows) - 通用 GPU 监控
  * 支持 NVIDIA 和其他品牌 GPU
  * GPU 负载和温度监控

- pyaudio>=0.2.12 (Windows) - 音频设备信息
  * 输入/输出音频设备列表
  * 声道数和采样率信息

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 psutil>=5.9.0
-PySide6>=6.5.0
+PySide6
 pywin32>=305; sys_platform == 'win32'
+wmi>=1.5.1; sys_platform == 'win32'
+nvidia-ml-py3>=7.352.0; sys_platform == 'win32'
+GPUtil>=1.4.0; sys_platform == 'win32'
+pyaudio>=0.2.12; sys_platform == 'win32'
